deployment/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: backend
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: "backend.local"
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: backend
                port:
                  number: 80
